--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <textarea name="massage" id="massage" cols="30" rows="10"></textarea>
 
                     <p class="confirmation-message">פרטייך התקבלו בהצלחה, נציג יחזור אליכם!</p>
-                    <button type="submit">שליחה</button>
+                    <button class="formBtn" type="submit">שליחה</button>
 
 
                 </div>
